yukon/html/monitor/style/style.css
* {
    box-sizing: border-box;
}

#messages-list {
    overflow-y: scroll;
    height: calc(74vh);
}

#messages-list textarea {
    display: block;
    list-style: none;
    height: auto;
    width: 99%;
    resize: none;
    border: none;
    height: content-box;
    overflow-y: hidden;
}

#messages-list textarea:focus {
    box-shadow: 0 0 5px #ccc;
}

#divSelectInterface {
    display: block;
}

#divSelectInterface label {
    display: block;
    margin-bottom: 0.5em;
}

#divSelectInterface select {
    display: block;
    width: 100%;
}

#divSelectInterface button {
    display: block;
    margin-bottom: 0.5em;
}

form#interface-selection-form {
    display: grid;
    grid-template-columns: 2fr 1fr;
}

#messages_title {
    margin-top: 3px;
}

#cy {
    width: 100%;
    height: 94%;
    display: block;
}

#split-right {
    min-width: 205px;
    width: 30%;
}

textarea#textOut {
    width: 100%;
}

.options-panel {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
}

.option {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0.5em;
    margin-top: 0.5em;
}

.excluded-keywords {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
}

#split-right {
    padding: 0.5em;
}

#taExcludedKeywords {
    height: 100%;
}

#available_configurations_radios {
    margin: 0.5em;
    width: 30em;
    display: grid;
    grid-template-columns: 0.1fr auto;
    grid-gap: 0.5em;
}

.noselect * {
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Old versions of Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

.registers-tab div {
    margin: 0.5em;
}

.block-display {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
}
.block-display * {
    margin-top: 0.5em;
}

.white-text {
    color: #fff !important;
}
.white-text * {
    color: #fff !important;
}

.white-text ~ * {
    color: #fff !important;
}

.pair-div:hover {
    background-color: #ccc;
}

.pair-div {
    margin-top: 0.5em;
    padding: 0.25em 2px;
}
.pair-div.incompatible {
    background-color: rgba(255, 0, 0, 0.165);
    color: #fff;
}

#no-refresh-option {
    display: flex;
    align-items: center;
    font-size: 3em;
    position: sticky;
    top: 0;
    left: 0;
}
#no-refresh-option input {
    width: 3em;
    height: 3em;
}

